test/corpus/namespace_identifiers.txt
================================================================================
Namespace identifiers with @ syntax
================================================================================

@mycompany:registry=https://npm.company.com
@babel:registry=https://registry.npmjs.org
@scope:always-auth=true

--------------------------------------------------------------------------------

(source_file
  (variable
    name: (identifier)
    value: (raw_value))
  (variable
    name: (identifier)
    value: (raw_value))
  (variable
    name: (identifier)
    value: (bool)))

================================================================================
Mixed namespace and regular identifiers
================================================================================

registry=https://registry.npmjs.org
@mycompany:registry=https://npm.company.com
auto-install-peers=true
@babel:always-auth=false

--------------------------------------------------------------------------------

(source_file
  (variable
    name: (identifier)
    value: (raw_value))
  (variable
    name: (identifier)
    value: (raw_value))
  (variable
    name: (identifier)
    value: (bool))
  (variable
    name: (identifier)
    value: (bool)))
